FIX(EMH): Modify the effective conditions of exp_size in CMS DefNew
--bug=135255681